--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,8 +1,19 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your theme here. -->
-    </style>
-
+<!-- Base application theme. -->
+<style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <!--<item name="android:windowBackground">@drawable/custom</item>-->
+    <!--<item name="android:windowFullscreen">true</item>-->
+    <item name="android:statusBarColor">#1F5F1F</item>
+    <item name="android:colorPrimaryDark">#1F5F1F</item>
+</style>
+<style name="SplashScreen_SplashTheme" parent="Theme.AppCompat.NoActionBar">
+    <item name="android:windowAnimationStyle">@style/SplashScreen_SplashAnimation</item>
+    <item name="android:statusBarColor">#1F5F1F</item>
+    <item name="android:colorPrimaryDark">#1F5F1F</item>
+</style>
+<style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <item name="android:windowBackground">@drawable/custom</item>
+    <item name="android:statusBarColor">#1F5F1F</item>
+</style>
 </resources>
